# BG3_ModdingTool

./: CMakeLists.txt  README.md  globalFunctions.cpp  globalFunctions.h  globalVars.cpp  globalVars.h  historyfile.cpp  historyfile.h  lineeditintablewidget.cpp  lineeditintablewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablecontextmenu.cpp  tablecontextmenu.h
Resources/: Resources.qrc
